# OpenShopProtocol

./: .gitignore  Cargo.toml  README.md
apps/node/: Cargo.toml  osp.db
apps/node/.cargo/: config.toml
apps/node/migrations/: 0001_initial.sql
apps/node/src/: admin.html  config.rs  db.rs  error.rs  main.rs  models.rs  validation.rs
apps/node/src/routes/: admin.rs  mod.rs  osp.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs  manifest.rs  product.rs  validation.rs  well_known.rs
schemas/: products.schema.json  shop.schema.json  well-known-osp.schema.json
schemas/examples/: products.example.json  shop.example.json
