[package]
name = "osp-node"
version = "0.1.0"
edition = "2021"
description = "OSP self-hosted node — HTTP server, SQLite store, admin UI"

[[bin]]
name = "osp-node"
path = "src/main.rs"

[dependencies]
osp-protocol = { path = "../../crates/protocol" }

# Runtime
tokio = { version = "1", features = ["full"] }

# Web
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "migrate", "time"] }

# Password hashing
argon2 = { version = "0.5", features = ["std"] }
rand_core = { version = "0.6", features = ["getrandom"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde-well-known"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
url = { version = "2", features = ["serde"] }
