[package]
name = "osp-protocol"
version = "0.1.0"
edition = "2021"
description = "Open Shop Protocol — core types, manifests and validation"
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = { version = "2", features = ["serde"] }
time = { version = "0.3", features = ["serde-well-known"] }
thiserror = "1"

[dev-dependencies]
serde_json = "1"
